fixed the overlapping screen on smaller screen

--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,7 @@ section#contacts {
 }
 
 /* hover overlay */
+
 .project {
   display: block;
   width: 100%;
@@ -94,6 +95,10 @@ section#contacts {
   max-width: 100%;
   width: 60%;
   object-fit: contain;
+}
+
+#header{
+  background-color: white;
 }
 
 .ab img {
