--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     display: none;
 }
 
@@ -69,11 +69,12 @@ nav ul li a {
 
 @media only screen and (min-width: 768px) {
     nav {
-        background-color: transparent;
+        background-color: white;
         display: flex;
         flex-direction: row;
         justify-content: flex-end
     }
+
 
     nav ul {
         display: flex;
